--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>This is the body header</h1>
     <p>This is Paragraph one </p>
     <p>This is Paragraph two</p>
+    <p>This is Paragraph three </p>
 </body>
 
 </html>
